--- a/RestfulApi/RestfulApi.csproj
+++ b/RestfulApi/RestfulApi.csproj
@@ -17,4 +17,8 @@
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Rest.Api.Schema\Rest.Api.Schema.csproj" />
+  </ItemGroup>
+
 </Project>
